<resources>
    <string name="app_name">Calculator</string>
    <string name="nav_header_title">Calculator</string>
    <string name="nav_header_subtitle">A product is built by Trung Nguyen</string>


    <string name="nav_header_desc">Calculator</string>

    <string name="menu_standard">Standard</string>
    <string name="menu_programmer">Programmer</string>


    <string name="menu_converter">Converter</string>
    <string name="menu_length">Length</string>
    <string name="menu_weight">Weight</string>
    <string name="menu_temp">Temperature</string>
    <string name="menu_speed">Speed</string>
    <string name="menu_about">About</string>

    <string name="author">Trung Nguyen</string>
    <string name="email">trung.nguyen.shotokun@gmail.com</string>
    <string name="author_text">Hope you enjoy my application!</string>

    <string name="left_replay">Replay left</string>
    <string name="right_replay">Replay right</string>
    <string name="exchange_unit">Exchange unit</string>

    <string name="default_value">0</string>
    <string name="bitwise">Bitwise</string>
    <string name="bit_shift">Bit shift</string>

<!--    array for converter-->
    <string-array name="array_converter">
        <item>Length</item>
        <item>Weight</item>
        <item>Temperature</item>
        <item>Speed</item>
    </string-array>

    <string-array name="array_null">
        <item></item>
    </string-array>
<!--    array for length unit-->
    <string-array name="array_length_unit">
        <item>Nanometers (nm)</item>
        <item>Micrometers (μm)</item>
        <item>Millimeters (mm)</item>
        <item>Centimeters (cm)</item>
        <item>Meters (m)</item>
        <item>Kilometers (km)</item>
        <item>Nautical Miles (nmi)</item>
        <item>Inches (in)</item>
        <item>Feet (ft)</item>
        <item>Yards (yd)</item>
        <item>Miles (mi)</item>
    </string-array>

    <!--    array for weight unit-->
    <string-array name="array_weight_unit">
        <item>Milligrams (mg)</item>
        <item>Grams (g)</item>
        <item>Kilogram (kg)</item>
        <item>Metric tonnes (t)</item>
        <item>Ounces (oz)</item>
        <item>Pounds (lb)</item>
        <item>Stones (st)</item>
    </string-array>

    <!--    array for speed unit-->
    <string-array name="array_speed_unit">
        <item>Meters per second (m/s)</item>
        <item>Kilometers per hour (km/h)</item>
        <item>Nautical Miles per hour (knot)</item>
        <item>Miles per hour (mph)</item>
        <item>Feet per second (ft/s)</item>
    </string-array>

    <!--    array for temperature unit-->
    <string-array name="array_temperature_unit">
        <item>Celsius (°C)</item>
        <item>Fahrenheit (°F)</item>
        <item>Kelvin (K)</item>
    </string-array>

    <!--    array for bitwise-->
    <string-array name="bitwise">
        <item>NOT</item>
        <item>AND</item>
        <item>OR</item>
        <item>XOR</item>
        <item>XNOR</item>
        <item>NAND</item>
        <item>NOR</item>
    </string-array>

    <!--    array for bit shift-->
    <string-array name="bit_shift">
        <item>Arithmetic shift</item>
        <item>Logical shift</item>
        <item>Circular shift</item>
        <item>Rotate through carry</item>
    </string-array>
    
    <string name="HEX">HEX</string>
    <string name="DEC">DEC</string>
    <string name="OCT">OCT</string>
    <string name="BIN">BIN </string>

</resources>
