<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_standard"
                android:icon="@drawable/ic_calculator"
                android:title="@string/menu_standard" />
            <item
                android:id="@+id/nav_programmer"
                android:icon="@drawable/ic_code"
                android:title="@string/menu_programmer" />
        </menu>
    </item>


<!--    <item android:title="Converter"-->
<!--        >-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_length"-->
<!--                android:icon="@drawable/ic_ruler"-->
<!--                android:title="@string/menu_length" />-->

<!--            <item-->
<!--                android:id="@+id/nav_weight"-->
<!--                android:icon="@drawable/ic_weight"-->
<!--                android:title="@string/menu_weight" />-->

<!--            <item-->
<!--                android:id="@+id/nav_temp"-->
<!--                android:icon="@drawable/ic_weather"-->
<!--                android:title="@string/menu_temp" />-->

<!--            <item-->
<!--                android:id="@+id/nav_speed"-->
<!--                android:icon="@drawable/ic_speed"-->
<!--                android:title="@string/menu_speed" />-->
<!--        </menu>-->

<!--    </item>-->

    <item
        android:id="@+id/nav_converter"
        android:title="@string/menu_converter"
        android:icon="@drawable/ic_arrow"
        />
    <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about"
            android:icon="@drawable/ic_info" />


<!--    <group android:checkableBehavior="single">-->

<!--    </group>-->
</menu>
