<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall"
    >

    <ImageView
        android:id="@+id/author_photo"
        android:layout_width="171dp"
        android:layout_height="163dp"
        android:layout_marginTop="30dp"

        android:src="@drawable/author_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textStyle="bold"
        android:textColor="@color/c4"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/author_name_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_photo" />

    <TextView
        android:id="@+id/author_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        android:textColor="@color/c4"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author" />

    <TextView
        android:id="@+id/author_quote"
        android:layout_width="226dp"
        android:layout_height="103dp"
        android:fontFamily="cursive"
        android:text="@string/author_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_email"
        app:layout_constraintVertical_bias="0.497" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:src="@drawable/ic_left_quote"
        app:layout_constraintBottom_toTopOf="@+id/author_quote"
        app:layout_constraintEnd_toStartOf="@+id/author_quote"
        app:layout_constraintTop_toBottomOf="@+id/author_email"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"

        android:src="@drawable/ic_right_quote"
        app:layout_constraintStart_toEndOf="@+id/author_quote"
        app:layout_constraintTop_toBottomOf="@+id/author_quote" />
</androidx.constraintlayout.widget.ConstraintLayout>